# sequrunner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.hpp  ui.cpp  ui.hpp
src/engine/: media.cpp  media.hpp  playback.cpp  playback.hpp  utility.cpp  utility.hpp
